<resources>
    <string name="app_name">E-shop</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="lock_image">Lock image</string>
    <string name="loading_please_wait">Loading…please wait…</string>
    <string name="remember_me">Remember me</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="my_account">My account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="account">Account</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="products">Products</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log out</string>
    <string name="details">Details</string>
    <string name="welcome_page">Welcome page</string>
    <string name="product_name">Product name</string>
    <string name="product_image">Product image</string>
    <string name="product_description">Product description</string>
    <string name="product_stock">Product stock</string>
    <string name="product_price">Product price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="checkout">Checkout</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="start_shopping">Start shopping</string>
    <string name="remove_from_cart">Remove</string>
    <string name="delivery_address">Delivery address</string>
    <string name="total_price">Total price</string>
    <string name="change_address">Change address</string>
    <string name="purchase">Purchase</string>
    <string name="purchased_details_1">Your order has been registered. You will receive your package in 7 to 9 working days.</string>
    <string name="purchased_details_2">The billing will be done at the moment of delivery.</string>
</resources>
