<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/account_item"
        android:title="@string/account"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:icon="@drawable/account">

        <menu>
            <item android:id="@+id/account_details_item"
                android:title="@string/details"/>
            <item android:id="@+id/logout_item"
                android:title="@string/log_out"/>
        </menu>

    </item>

    <item android:id="@+id/shopping_cart_item"
        android:title="@string/shopping_cart"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:icon="@drawable/shopping_cart"
        />

    <item android:id="@+id/products_item"
        android:title="@string/products"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/products"
        />
</menu>