<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".activities.ProductInfo">

    <ProgressBar
        android:id="@+id/loading_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:contentDescription="@string/product_image"
                app:srcCompat="@drawable/welcome_page" />

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:text="@string/product_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProductDescription"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:text="@string/product_description" />

            <TextView
                android:id="@+id/tvProductStock"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:text="@string/product_stock" />

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:text="@string/product_price" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:text="@android:string/cancel"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:text="@string/add_to_cart"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>