<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".activities.PurchasedActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:text="@string/purchased_details_1"
        android:textColor="#28a745"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:text="@string/purchased_details_2"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnContinueShopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/buttons"
        android:text="@string/continue_shopping"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</LinearLayout>